--- a/helix-sitemap.yaml
+++ b/helix-sitemap.yaml
@@ -1,5 +1,15 @@
 sitemaps:
   example:
     source: /query-index.json
-    destination: /sitemap-en.xml
-    lastmod: YYYY-MM-DD
+    destination: /sitemap.xml
+    lastmod: DD/MM/YYYY
+    languages:
+       en:
+         source: /query-index.json
+         destination: /sitemap-en.xml
+         hreflang: en
+       fr:
+         source: /fr/query-index.json
+         destination: /sitemap-fr.xml
+         hreflang: fr
+         alternate: /fr/{path}
